# logos

./: .coverage  .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml  macos.yml  windows.yml
src/logos/: __init__.py  main.py  utils.py
src/logos/types/: entry.py  log.py  task.py
tests/: test_entry.py  test_task.py
