[project]
name = "logos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Harvey Devereux", email = "h.devereux@qmul.ac.uk" }
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.20.0",
]

[project.scripts]
logos = "logos.main:app"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
addopts = "--cov=logos"
pythonpath = ["./src"]
